<resources>
    <string name="app_name">Wallpapers</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>

    <string name="set_wallpaper">Apply</string>
    <string name="share_wallpaper">Share</string>
    <string name="back_button">Back</string>
    <string name="permission_info_message">Give app permission to change wallpaper.</string>
    <string name="ok">OK</string>

    <string-array name="set_types">
        <item>Main screen</item>
        <item>Lock screen</item>
        <item>Main and lock</item>
    </string-array>
    <string name="image_loading">Image loading…</string>
    <string name="please_waiting">Please waiting…</string>
    <string name="error_sharing">Error while sharing image</string>
    <string name="close">Close</string>
    <string name="open_soft_license">Licenses</string>
    <string name="title_activity_settings">Settings</string>
    <string name="retry">Repeat</string>
    <string name="error">Error</string>
    <string name="some_error_happens">Oh no…</string>
    <string name="network_error">Check network connection.</string>
    <string name="app_version">App version: %1$s (%2$s)</string>
    <string name="app_settings">Settings</string>
    <string name="bitmap_set">Wallpaper set</string>
    <string name="album_background">Album background</string>
    <string name="buy_full_summary">Support developers by buying full version with more wallpapers!</string>
    <string name="full_version">Full version</string>

    <string-array name="albums_native" translatable="false">
        <item>Города</item>
        <item>Девушки</item>
        <item>Живопись</item>
        <item>Животные</item>
        <item>Космос</item>
        <item>Машины</item>
        <item>Обои</item>
        <item>Оружие</item>
        <item>Пейзажи</item>
        <item>Текстуры</item>
    </string-array>

    <string-array name="albums_translated" translatable="false">
        <item>Cities</item>
        <item>Girls</item>
        <item>Painting</item>
        <item>Animals</item>
        <item>Space</item>
        <item>Cars</item>
        <item>Wallpapers</item>
        <item>Weapons</item>
        <item>Landscapes</item>
        <item>Textures</item>
    </string-array>
    <string name="buy_me_a_coffee">Buy me a coffee</string>
    <string name="buy_me_a_snack">Buy me a snack</string>
    <string name="buy_me_a_sandwich">Buy me a pizza</string>
    <string name="buy">Buy</string>
    <string name="cancel">Cancel</string>
    <string name="support_development">Support development</string>
    <string name="support">Support</string>
    <string name="error_billing_opening">Error while accessing Google services.</string>
    <string name="thank_you">Thank you!</string>
    <string name="contact_me_title">Contact me</string>
    <string name="contact_me_summary">If you liked this app and you have any suggestions for development, then feel free contact to me.</string>
    <string name="dev_email" translatable="false">org.aim.dev@gmail.com</string>
    <string name="thank_you_message">Thank you for supporting the development! Thanks to you the application will get even better!</string>

</resources>
