<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:animateLayoutChanges="true"
    android:gravity="center"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <ImageView
        android:contentDescription="@string/error"
        android:id="@+id/image_view"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:padding="8dp"
        app:srcCompat="@drawable/ic_error_accent_48dp"/>

    <TextView
        style="@style/Base.TextAppearance.AppCompat.Medium"
        android:gravity="center"
        android:id="@+id/text_view"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/some_error_happens"/>

    <TextView
        style="@style/Base.TextAppearance.AppCompat.Small"
        android:gravity="center"
        android:id="@+id/desc_text_view"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:padding="8dp"
        android:visibility="gone"
        tools:text="Проверьте подключение к сети."/>

    <Button
        android:id="@+id/button"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_width="wrap_content"
        android:text="@string/retry"/>

</LinearLayout>