<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?attr/colorPrimary"
    android:id="@+id/container"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context="org.aim.wallpaper.ui.photo.PhotosActivity">

    <android.support.v4.view.ViewPager
        android:id="@+id/view_pager"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        />

    <FrameLayout
        android:animateLayoutChanges="true"
        android:fitsSystemWindows="true"
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <RelativeLayout
            style="?metaButtonBarStyle"
            android:background="@color/black_overlay"
            android:id="@+id/share_controls"
            android:layout_gravity="top"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:paddingBottom="16dp"
            android:paddingEnd="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingStart="16dp"
            android:paddingTop="18dp"
            tools:ignore="UselessParent">

            <ImageButton
                style="?metaButtonBarButtonStyle"
                android:background="?selectableItemBackgroundBorderless"
                android:contentDescription="@string/back_button"
                android:id="@+id/back_button"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:padding="4dp"
                android:text="@string/share_wallpaper"
                app:srcCompat="@drawable/ic_arrow_back_white_32dp"/>

            <ImageButton
                style="?metaButtonBarButtonStyle"
                android:background="?selectableItemBackgroundBorderless"
                android:contentDescription="@string/share_wallpaper"
                android:id="@+id/share_button"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:padding="4dp"
                app:srcCompat="@drawable/ic_share_white_32dp"/>

        </RelativeLayout>

        <LinearLayout
            style="?metaButtonBarStyle"
            android:background="@color/black_overlay"
            android:id="@+id/content_controls"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <Button
                style="?metaButtonBarButtonStyle"
                android:background="?attr/selectableItemBackground"
                android:id="@+id/set_button"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:text="@string/set_wallpaper"/>

        </LinearLayout>

    </FrameLayout>

</FrameLayout>
